# dmg

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: lib.rs
testdata/: test_compressed.dmg
