[package]
name = "dmg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command-rs = {git = "https://github.com/drewcrawford/command-rs",features=["output"]}
kiruna = {git = "https://github.com/drewcrawford/kiruna" }
core-foundationr = {git = "https://github.com/drewcrawford/core-foundationr"}
thiserror = "~1"

[dev-dependencies]
kiruna = {git = "https://github.com/drewcrawford/kiruna", features=["test"]}
